--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -18,6 +18,7 @@
 @import "normalize";
 @import "generic/reset";
 @import "generic/resetMargin";
+@import "generic/link";
 
 
 
@@ -33,6 +34,7 @@
 // COMPONENTS
 // Composants d'interface utilisateur spécifiques.
 // C’est là que la majorité de notre travail a lieu.
+@import "components/wrapper";
 @import "components/header";
 @import "components/hero";
 @import "components/interets";
